--- a/pages/index.css
+++ b/pages/index.css
@@ -9,7 +9,24 @@
 @import url(../blocks/section-width/__wide/section-width__wide.css);
 @import url(../blocks/section-width/__narrow/section-widh__narrow.css);
 @import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/lead.css);
 @import url(../blocks/main/main.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__item/intro__item.css);
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/gallery/gallery.css);
+@import url(../blocks/places/places.css);
+@import url(../blocks/places/__place/places__place.css);
+@import url(../blocks/places/__title/places__title.css);
+@import url(../blocks/places/__link/places__link.css);
+@import url(../blocks/places/__url-heading/places__url-heading.css);
+@import url(../blocks/places/__text/places__text.css);
+@import url(../blocks/places/__website/places__website.css);
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+@import url(../blocks/cover/__link/cover__link.css);
