pre-final version

--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -6,9 +6,23 @@
     background-repeat: no-repeat;
     background-position: center;
     width: 1184px;
-    max-height: 740px;
+    min-height: 740px;
     height: 100vh;
     background-size: cover;
     margin: 0 auto;
     margin-bottom: 92px;
+    position: relative;
 }
+/* 
+.cover::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    background-color: #2a2c2f;
+    opacity: 0.3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+} */
