--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,12 +1,7 @@
-.cover__title {
-    font-size: 72px;
-    font-weight: 900;
-    line-height: 76px;
-    text-align: center;
-    width: 560px;
-    margin: 0 auto;
-    margin-bottom: 32px;
+.cover__link {
+    max-width: 560px;
+    margin: 0 auto 32px;
     text-decoration: none;
-    color: #ffffff;
-    z-index: 102;
+    text-align: center;
+    color: inherit;
 }
