--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -3,7 +3,7 @@
     font-weight: 400;
     line-height: 22px;
     text-align: center;
-    width: 360px;
+    max-width: 360px;
     margin: 0 auto;
-    z-index: 1002;
+    text-rendering: optimizeLegibility;
 }
