--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -6,23 +6,27 @@
     background-repeat: no-repeat;
     background-position: center;
     width: 1184px;
-    min-height: 740px;
+    max-height: 740px;
     height: 100vh;
     background-size: cover;
-    margin: 0 auto;
     margin-bottom: 92px;
     position: relative;
+    z-index: 0;
 }
-/* 
-.cover::before {
+
+.cover::before{
     content: "";
     position: absolute;
-    width: 100%;
+    left: 0;
     top: 0;
-    bottom: 0;
+    width: 100%;
+    height: 100%;
     background-color: #2a2c2f;
     opacity: 0.3;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-} */
+    z-index: -1;
+}
+
+.cover:hover::before{
+    transition: 0.4s;
+    opacity: 0.8;
+}
