--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -1,7 +1,16 @@
 .gallery {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, 284px);
+    grid-template-rows: repeat(3, 213px);
     gap: 16px;
     margin-bottom: 92px;
+}
+
+@media screen and (max-width: 1279px) {
+    .gallery {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, 300px);
+        grid-template-rows: repeat(4, 225px);
+        gap: 14px;
+    }
 }
