--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,11 +1,8 @@
 .header__lang-link {
     font-size: 24px;
     font-weight: 400;
-    color: #ffffff;
+    color: inherit;
     text-decoration: none;
-    margin-right: 18px;
+    line-height: 28px;
 }
 
-.header__lang-link:last-child {
-    margin: 0;
-}
