--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,10 +1,16 @@
 .header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: end;
     min-height: 52px;
     box-sizing: border-box;
     padding-top: 28px;
-    margin: 0 auto;
-    margin-bottom: 56px;
+    margin: 0 auto 56px;
+}
+
+@media screen and (max-width: 1279px) {
+.header{
+    margin-bottom: 48px;
+}
+    
 }
