--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -2,8 +2,7 @@
     width: 690px;
     font-size: 16px;
     font-weight: 400;
-    line-height: 26px;
+    line-height: 163%;
     text-align: left;
-    margin: 0;
-    margin-bottom: 33px;
+    margin: 0 0 33px;
 }
