--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,8 +1,9 @@
 .lead__title {
-    width: 720px;
+    max-width: 720px;
     font-size: 96px;
     font-weight: 900;
     text-align: center;
-    margin: 0 auto;
-    margin-bottom: 32px;
+    margin: 0 auto 32px;
+    line-height: 100px;
+    text-rendering: optimizeLegibility;
 }
