--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,5 @@
 .lead {
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
-    margin-bottom: 92px;
+    margin: 0 auto 92px;
 }
