--- a/blocks/main/main.css
+++ b/blocks/main/main.css
@@ -1,7 +1,7 @@
 .main {
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
+    justify-content: center;
     align-items: center;
     margin: 0 auto;
 }
