--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
-    min-width: 1280px;
-    margin: 0 auto;
+    display: block;
     font-family: "Inter", Arial, sans-serif;
-    background-color: #2a2c2f;
     color: #ffffff;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale; 
 }
