--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -1,4 +1,14 @@
 .places__image {
-    width: 460px;
-    height: 460px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
+
+/* @media screen and (max-width: 1279px) {
+    .places__image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
+} */
