--- a/blocks/places/__link/places__link.css
+++ b/blocks/places/__link/places__link.css
@@ -3,6 +3,6 @@
     font-weight: 400;
     line-height: 22px;
     text-align: left;
-    text-decoration: none;
+    text-decoration: underline;
     color: #ffffff;
 }
