--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -4,9 +4,14 @@
     grid-column-gap: 40px;
     grid-template-rows: repeat(2, auto);
     grid-row-gap: 48px;
-    margin-bottom: 80px;
 }
 
-.places__place:last-child {
-    margin: 0;
+@media screen and (max-width: 1279px) {
+    .places__place {
+        grid-template-columns: minmax(auto, 440px) minmax(auto, 456px);
+        grid-column-gap: 32px;
+        grid-template-rows: repeat(2, auto);
+        grid-row-gap: 48px;
+        
+    }
 }
