--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -5,3 +5,9 @@
     text-align: left;
     margin: 0;
 }
+
+@media screen and (max-width: 1279px) {
+    .places__title {
+    max-width: 440px;
+}
+}
