--- a/blocks/section-width/__narrow/section-widh__narrow.css
+++ b/blocks/section-width/__narrow/section-widh__narrow.css
@@ -1,3 +1,10 @@
 .section-width__narrow {
     max-width: 984px;
 }
+
+@media screen and (max-width: 1279px) {
+    .section-width__narrow{
+        max-width: 928px;
+    }
+    
+}
