--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,5 @@
 @import url(../vendors/normalize.css);
+@import url(../blocks/root/root.css);
 @import url(../vendors/fonts.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
@@ -20,6 +21,7 @@
 @import url(../blocks/intro/__item/intro__item.css);
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/gallery/gallery.css);
+@import url(../blocks/gallery/__item/gallery__item.css);
 @import url(../blocks/places/places.css);
 @import url(../blocks/places/__place/places__place.css);
 @import url(../blocks/places/__title/places__title.css);
@@ -27,9 +29,11 @@
 @import url(../blocks/places/__url-heading/places__url-heading.css);
 @import url(../blocks/places/__text/places__text.css);
 @import url(../blocks/places/__website/places__website.css);
+@import url(../blocks/places/__image/places__image.css);
 @import url(../blocks/cover/cover.css);
-@import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/cover/__link/cover__link.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+@import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/overlay/overlay.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__links/footer__links.css);
