--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -1,14 +1,13 @@
 .places__image {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: auto;
 }
 
-/* @media screen and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
     .places__image {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+        width:  100%;
+        height: auto;
+
     }
     
-} */
+}
