--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,9 +1,16 @@
 .intro__title {
-    width: 690px;
+    max-width: 690px;
     font-size: 54px;
     font-weight: 900;
     line-height: 58px;
     text-align: left;
     margin:0 0 40px;
     text-rendering: optimizeLegibility;
+}
+
+@media screen and (max-width: 1279px) {
+    .intro__title{
+        max-width: 720px;
+    }
+    
 }
