--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -8,3 +8,10 @@
     letter-spacing: 1.5px;
     text-transform: uppercase;
 }
+
+@media screen and (max-width: 1279px) {
+    .lead__caption{
+margin-left: 24px;
+    }
+    
+}
