--- a/blocks/places/__text/places__text.css
+++ b/blocks/places/__text/places__text.css
@@ -1,7 +1,20 @@
 .places__text {
     font-size: 18px;
     font-weight: 400;
-    line-height: 29px;
+    line-height: 29.34px;
     text-align: left;
     margin: 0;
+    margin-bottom: 26px;
+}
+
+.places__text:last-child {
+    margin-bottom: 0;
+}
+
+@media screen and (max-width: 1023px) {
+    .places__text {
+        margin-bottom: 25px;
+        font-size: 16px;
+        line-height: 26.08px;
+    }
 }
