--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -2,12 +2,21 @@
     font-size: 72px;
     font-weight: 900;
     line-height: 76px;
-    text-align: left;
+    text-align:left;
+    align-self:flex-end;
     margin: 0;
 }
 
 @media screen and (max-width: 1279px) {
     .places__title {
     max-width: 440px;
+}
+}
+
+@media screen and (max-width: 1023px) {
+    .places__title {
+    max-width: 330px;
+    font-size: 42px;
+    line-height: 46px;
 }
 }
