--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -7,3 +7,11 @@
     margin: 0 auto;
     text-rendering: optimizeLegibility;
 }
+
+@media screen and (max-width: 767px) {
+    .cover__subtitle{
+        max-width: 267px;
+        font-size: 14px;
+        line-height: 16px;
+    }
+}
