--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,3 +7,12 @@ line-height: 76px;
 color: inherit;
 text-rendering: optimizeLegibility;
 }
+
+@media screen and (max-width: 767px) {
+    .cover__title{
+        max-width: 230px;
+        font-size: 32px;
+        line-height: 35px;
+        margin-bottom: 16px;
+    }
+}
