--- a/blocks/footer/__author/footer__author.css
+++ b/blocks/footer/__author/footer__author.css
@@ -6,3 +6,13 @@
     line-height: 18px;
     color: inherit;
 }
+
+@media screen and (max-width: 767px) {
+    .footer__author {
+
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 14px;
+
+    }
+}
