--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -7,3 +7,12 @@
     text-decoration: none;
     color: inherit;
 }
+
+@media screen and (max-width: 767px) {
+    .footer__link{
+        font-size: 24px;
+        font-weight: 400;
+        line-height: 24px;
+    }
+    
+}
