--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -4,3 +4,12 @@
     gap: 18px;
     margin-bottom: 24px;
 }
+
+@media screen and (max-width: 767px) {
+    .footer__links{
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
+        margin: 0;
+    }
+}
