--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,3 +5,13 @@
     margin: 0 auto;
 
 }
+
+@media screen and (max-width: 767px) {
+    .footer{
+        display: flex;
+        flex-direction: column;
+        gap: 48px;
+        margin-bottom: 24px;
+    }
+    
+}
