--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -24,3 +24,13 @@
         margin-bottom: 88px;
     }
 }
+
+@media screen and (max-width: 767px) {
+    .gallery {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, 288px);
+        grid-auto-rows: 216px;
+        gap: 12px;
+        margin-bottom: 64px;
+    }
+}
