--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,3 +6,12 @@
     line-height: 28px;
 }
 
+
+@media screen and (max-width: 767px) {
+    .header__lang-link{
+        font-size: 18px;
+        line-height: 20px;
+    }
+    
+}
+
