--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,8 +1,17 @@
 .intro__text {
-    width: 690px;
+    max-width: 690px;
     font-size: 16px;
     font-weight: 400;
     line-height: 163%;
     text-align: left;
     margin: 0 0 33px;
+}
+
+@media screen and (max-width: 767px) {
+    .intro__text{
+        max-width: 690px;
+        line-height: 26.08px;
+        margin-bottom: 34px;
+    }
+    
 }
