--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -14,3 +14,11 @@
     }
     
 }
+
+@media screen and (max-width: 767px) {
+    .intro__title{
+        font-size: 32px;
+        line-height: 35px;
+    }
+    
+}
