--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -7,5 +7,10 @@ margin-bottom: 92px;
     .intro{
         margin-bottom: 88px;
     }
-    
+}
+
+@media screen and (max-width: 767px) {
+    .intro{
+        margin-bottom: 64px;
+    }
 }
