--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -9,5 +9,12 @@
 
 @media screen and (max-width: 1279px) {
     .lead__subtitle{margin-bottom: 56px;}
-    
+}
+
+@media screen and (max-width: 767px) {
+    .lead__subtitle{
+
+font-size: 16px;
+line-height: 20px;
+        margin-bottom: 40px;}
 }
