--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -7,3 +7,12 @@
     line-height: 100px;
     text-rendering: optimizeLegibility;
 }
+
+@media screen and (max-width: 767px) {
+    .lead__title {
+        font-weight: 900;
+        font-size: 40px;
+        line-height: 44px;
+        margin-bottom: 16px;
+    }
+}
