--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,6 @@
 .page {
     display: block;
+    margin: 0 auto;
     font-family: "Inter", Arial, sans-serif;
     color: #ffffff;
     -webkit-font-smoothing: antialiased;
