--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -3,7 +3,6 @@
     font-weight: 900;
     line-height: 76px;
     text-align:left;
-    align-self:flex-end;
     margin: 0;
 }
 
@@ -18,5 +17,13 @@
     max-width: 330px;
     font-size: 42px;
     line-height: 46px;
+}
+}
+
+@media screen and (max-width: 767px) {
+    .places__title {
+    max-width: 288px;
+    font-size: 32px;
+    line-height: 35px;
 }
 }
