--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -10,3 +10,10 @@
         margin-bottom: 90px;
     }
 }
+
+@media screen and (max-width: 767px) {
+    .places {
+        margin-bottom: 66px;
+        row-gap: 50px;
+    }
+}
