--- a/blocks/section-width/__wide/section-width__wide.css
+++ b/blocks/section-width/__wide/section-width__wide.css
@@ -13,3 +13,9 @@
         max-width: 720px;
     }
 }
+
+@media screen and (max-width: 767px) {
+    .section-width__wide{
+        max-width: 288px;
+    }
+}
