--- a/blocks/places/__link/places__link.css
+++ b/blocks/places/__link/places__link.css
@@ -5,4 +5,11 @@
     text-align: left;
     text-decoration: underline;
     color: #ffffff;
+    
+}
+
+@media screen and (max-width: 767px) {
+    .places__link{
+    padding-left: 16px;
+    }
 }
