--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -2,3 +2,11 @@
     width: 100%;
     height: auto;
 }
+
+@media screen and (max-width: 767px) {
+    .places__image {
+        max-width: 100%;
+        max-height: 100%;
+        align-self: center; 
+    }
+}
