--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -28,7 +28,7 @@
 
 @media screen and (max-width: 767px) {
     .places__place {
-        grid-template-columns: minmax(auto, 288px);
+        grid-template-columns:  320px;
         grid-template-rows: repeat(2, auto);
         grid-row-gap: 32px;
     }
