--- a/blocks/places/__text/places__text.css
+++ b/blocks/places/__text/places__text.css
@@ -18,3 +18,10 @@
         line-height: 26.08px;
     }
 }
+
+@media screen and (max-width: 767px) {
+    .places__text{
+        max-width: 288px;
+        margin: 0 auto;
+    }
+}
