--- a/blocks/places/__url-heading/places__url-heading.css
+++ b/blocks/places/__url-heading/places__url-heading.css
@@ -9,3 +9,9 @@
     margin: 0;
     margin-bottom: 12px;
 }
+
+@media screen and (max-width: 767px) {
+    .palces__url-heading{
+        padding-left: 16px;
+    }
+}
