--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -7,11 +7,16 @@
     margin: 0 0 33px;
 }
 
+@media screen and (max-width: 1023px) {
+    .intro__text{
+        max-width: 720px;
+    }
+}
+
 @media screen and (max-width: 767px) {
     .intro__text{
         max-width: 690px;
         line-height: 26.08px;
         margin-bottom: 34px;
     }
-    
 }
