--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -3,9 +3,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 740px; 
+    min-height: 740px;
     width: 100%;
-    margin: 0 auto 32px;
+    margin: 0 auto;
     text-decoration: none;
     text-align: center;
     color: inherit;
@@ -13,21 +13,18 @@
 
 @media screen and (max-width: 1279px) {
     .cover__link{
-        display: block;
-        height: 100%; 
+        min-height: 640px;
     }
-}
+} 
 
 @media screen and (max-width: 1023px) {
     .cover__link{
-        display: block;
-        height: 100%; 
+        min-height: 480px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .cover__link{
-        display: block;
-        height: 100%; 
+        min-height: 200px;
     }
-}
+} 
