--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -13,3 +13,9 @@
     margin-bottom: 48px;
 } 
 }
+
+@media screen and (max-width: 767px) {
+    .header{
+        padding-top: 16px;
+    } 
+    }
