--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -6,11 +6,20 @@ margin-bottom: 92px;
 @media screen and (max-width: 1279px) {
     .intro{
         margin-bottom: 88px;
+        max-width: 928px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .intro{
+        margin-bottom: 88px;
+        max-width: 720px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .intro{
         margin-bottom: 64px;
+        max-width: 288px;
     }
 }
