--- a/pages/index.css
+++ b/pages/index.css
@@ -20,6 +20,7 @@
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__item/intro__item.css);
 @import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__span/intro__span.css);
 @import url(../blocks/gallery/gallery.css);
 @import url(../blocks/gallery/__item/gallery__item.css);
 @import url(../blocks/places/places.css);
