--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -4,6 +4,7 @@
     grid-template-rows: repeat(3, 213px);
     gap: 16px;
     margin-bottom: 92px;
+    max-width: 1184px;
 }
 
 @media screen and (max-width: 1279px) {
@@ -12,6 +13,7 @@
         grid-template-columns: repeat(auto-fit, 300px);
         grid-template-rows: repeat(4, 225px);
         gap: 14px;
+        max-width: 928px;
     }
 }
 
@@ -22,6 +24,7 @@
         grid-template-rows: repeat(6, 264px);
         gap: 16px;
         margin-bottom: 88px;
+        max-width: 720px;
     }
 }
 
@@ -32,5 +35,6 @@
         grid-auto-rows: 216px;
         gap: 12px;
         margin-bottom: 64px;
+        max-width: 288px;
     }
 }
