--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,7 +3,19 @@
     justify-content: space-between;
     align-items: start;
     margin: 0 auto;
+    max-width: 1184px;
+}
 
+@media screen and (max-width: 1279px) {
+    .footer{
+        max-width: 928px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .footer{
+        max-width: 720px;
+    }
 }
 
 @media screen and (max-width: 767px) {
@@ -12,5 +24,6 @@
         flex-direction: column;
         gap: 48px;
         margin-bottom: 24px;
+        max-width: 288px;
     }
 }
