--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,16 +6,25 @@
     box-sizing: border-box;
     padding-top: 28px;
     margin: 0 auto 56px;
+    max-width: 1184px;
 }
 
 @media screen and (max-width: 1279px) {
 .header{
     margin-bottom: 48px;
+    max-width: 928px;
 } 
+}
+
+@media screen and (max-width: 1023px) {
+    .header{
+        max-width: 720px;
+    }
 }
 
 @media screen and (max-width: 767px) {
     .header{
+        max-width: 288px;
         padding-top: 16px;
     } 
     }
