--- a/blocks/places/__url-heading/places__url-heading.css
+++ b/blocks/places/__url-heading/places__url-heading.css
@@ -1,4 +1,4 @@
-.palces__url-heading {
+.places__url-heading {
     font-size: 12px;
     font-weight: 400;
     line-height: 20px;
@@ -11,7 +11,7 @@
 }
 
 @media screen and (max-width: 767px) {
-    .palces__url-heading{
+    .places__url-heading{
         padding-left: 16px;
     }
 }
