--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,11 +3,13 @@
     flex-direction: column;
     row-gap: 80px;
     margin-bottom: 92px;
+    max-width: 984px;
 }
 
 @media screen and (max-width: 1023px) {
     .places {
         margin-bottom: 90px;
+        max-width: 720px;
     }
 }
 
