--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -41,13 +41,22 @@
 
 @media screen and (max-width: 1023px) {
     .cover{
-        max-width: 768px;
+        max-width: 100%;
         min-height: 480px;
     }
     
 }
 
 @media screen and (max-width: 767px) {
+    .cover{
+        max-width: 100%;
+        min-height: 350px;
+        margin-bottom: 64px;
+    }
+    
+}
+
+@media screen and (max-width: 449px) {
     .cover{
         max-width: 100%;
         min-height: 200px;
