--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -7,6 +7,12 @@
 
 @media screen and (max-width: 767px) {
     .footer__links{
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+}
+@media screen and (max-width: 449px) {
+    .footer__links{
         display: flex;
         flex-direction: column;
         gap: 32px;
