--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -20,10 +20,18 @@
 
 @media screen and (max-width: 767px) {
     .footer{
-        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap:26px;
+        max-width: 720px;
+        padding: 0 16px;
+    }
+}
+
+@media screen and (max-width: 449px) {
+    .footer{
         flex-direction: column;
         gap: 48px;
-        margin-bottom: 24px;
         max-width: 288px;
     }
 }
