--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -11,7 +11,12 @@
 
 @media screen and (max-width: 1023px) {
     .lead__caption{
-        margin-left: 24px;
+        padding-left: 24px;
     }
 }
 
+@media screen and (max-width: 767px) {
+    .lead__caption{
+        padding-left: 16px;
+    }
+}
