--- a/blocks/places/__link/places__link.css
+++ b/blocks/places/__link/places__link.css
@@ -10,6 +10,7 @@
 
 @media screen and (max-width: 767px) {
     .places__link{
-    padding-left: 16px;
+        max-width: 320px;
+        padding-left: 16px;
     }
 }
