--- a/blocks/places/__text/places__text.css
+++ b/blocks/places/__text/places__text.css
@@ -21,7 +21,7 @@
 
 @media screen and (max-width: 767px) {
     .places__text{
-        max-width: 288px;
-        margin: 0 auto;
+        max-width: 100%;
+        padding-left: 16px;
     }
 }
