--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -15,7 +15,7 @@
 
 @media screen and (max-width: 767px) {
     .places {
-        max-width: 320px;
+        width: 100%;
         margin-bottom: 66px;
         row-gap: 50px;
     }
