--- a/pages/index.css
+++ b/pages/index.css
@@ -23,6 +23,7 @@
 @import url(../blocks/gallery/__item/gallery__item.css);
 @import url(../blocks/places/places.css);
 @import url(../blocks/places/__place/places__place.css);
+@import url(../blocks/places/__texts/places__texts.css);
 @import url(../blocks/places/__title/places__title.css);
 @import url(../blocks/places/__link/places__link.css);
 @import url(../blocks/places/__url-heading/places__url-heading.css);
