--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -1,10 +1,4 @@
 .places__image {
     width: 100%;
-    height: auto;
+    aspect-ratio: 1/1;
 }
-
-/* @media screen and (max-width: 767px) {
-    .places__image {
-
-    }
-} */
