--- a/blocks/places/__text/places__text.css
+++ b/blocks/places/__text/places__text.css
@@ -20,8 +20,8 @@
 }
 
 @media screen and (max-width: 767px) {
-    .places__text{
+    .places__text {
         max-width: 100%;
-        padding-left: 16px;
+        padding: 0 16px;
     }
 }
