--- a/pages/index.css
+++ b/pages/index.css
@@ -1,26 +1,37 @@
-@import url(../vendors/normalize.css);
+@import url(../vendor/normalize.css);
+
 @import url(../blocks/root/root.css);
-@import url(../vendors/fonts.css);
+
+@import url(../vendor/fonts.css);
+
 @import url(../blocks/page/page.css);
+
+@import url(../blocks/main/main.css);
+
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__nav/header__nav.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
+@import url(../blocks/header/__lang-link/_selected/header__lang-link_selected.css);
+
 @import url(../blocks/link-hover/link-hover.css);
+
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/lead.css);
-@import url(../blocks/main/main.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
+
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__item/intro__item.css);
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/intro/__span/intro__span.css);
+
 @import url(../blocks/gallery/gallery.css);
 @import url(../blocks/gallery/__item/gallery__item.css);
+
 @import url(../blocks/places/places.css);
 @import url(../blocks/places/__place/places__place.css);
 @import url(../blocks/places/__texts/places__texts.css);
@@ -30,12 +41,13 @@
 @import url(../blocks/places/__text/places__text.css);
 @import url(../blocks/places/__website/places__website.css);
 @import url(../blocks/places/__image/places__image.css);
+
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__link/cover__link.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/cover/__title/cover__title.css);
-@import url(../blocks/overlay/overlay.css);
+
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__links/footer__links.css);
 @import url(../blocks/footer/__link/footer__link.css);
-@import url(../blocks/footer/__author/footer__author.css);
+@import url(../blocks/footer/__author/footer__author.css); ;
