--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,7 +3,9 @@
     justify-content: space-between;
     align-items: start;
     margin: 0 auto;
+    padding-bottom: 24px;
     max-width: 1184px;
+    /* min-height: 14px; */
 }
 
 @media screen and (max-width: 1279px) {
@@ -18,7 +20,7 @@
         flex-wrap: wrap;
         gap: 26px;
         max-width: 720px;
-        padding: 0 16px;
+        padding: 0 16px 24px;
     }
 }
 
